<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="explore_your_dream_food">Explore Your Dream Food</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="flavornest">FlavorNest</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registerd">Already Registerd ?</string>
    <string name="user_name">User Name</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="customer_gmail_com">customer@gmail.com</string>
    <string name="customer">Customer</string>
    <string name="search_your_food">Search Your Food</string>
    <string name="hello_user">Hello User</string>
    <string name="pizza">Pizza</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="dinner">Dinner</string>
    <string name="description_description_description">Description Description Description</string>
    <string name="discount">Discount</string>
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="total_price">Total Price</string>
    <string name="rs_6000_00">Rs.6000.00</string>
    <string name="make_order">Make Order</string>
</resources>